# supertanks-guard-mcp

./: .gitignore  LICENSE  PROSJEKT.md  README.md  manifest.json  pyproject.toml
supertanks_guard/: __init__.py  audit.py  cli.py  gate.py  server.py
tests/: test_guard.py
